force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <label>Session</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>