force-app/main/default/objects/Session__c/fields/Broker_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q&amp;A Session</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>MU1 Prep</fullName>
            </value>
            <value>
                <fullName>MU1 Submission</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>