force-app/main/default/objects/Session__c/fields/License_Specialist__c.field-meta.xml
<CustomField>
    <fullName>License_Specialist__c</fullName>
    <formula>Contact__r.Licensing_Specialist__r.FirstName + &quot; &quot; + Contact__r.Licensing_Specialist__r.LastName</formula>
    <label>License Specialist</label>
    <type>Text</type>
</CustomField>