force-app/main/default/objects/Session__c/fields/MU1_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>MU1_Status_Field__c</fullName>
    <label>MU1 Status Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved / Deficiencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>