force-app/main/default/objects/Session__c/fields/Rescheduled_Session__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescheduled Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>