force-app/main/default/objects/Session__c/fields/Session_Link__c.field-meta.xml
<CustomField>
    <fullName>Session_Link__c</fullName>
    <formula>Event__r.Meeting_Link__c</formula>
    <label>Session Link</label>
    <type>Text</type>
</CustomField>