force-app/main/default/objects/Session__c/fields/Session_Size__c.field-meta.xml
<CustomField>
    <fullName>Session_Size__c</fullName>
    <label>Session Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 on 1</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>