force-app/main/default/objects/Session__c/fields/Time_of_Session__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Session__c</fullName>
    <label>Time of Session</label>
    <type>Time</type>
</CustomField>